flêche haut plutôt que bas

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </ul>
       </nav><!-- .nav-menu -->
 
-      <div class="header-social-links">
+      <div class="header-social-links d-lg-block d-none">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
         <!--a href="#" class="instagram"><i class="icofont-instagram"></i></a-->
@@ -91,7 +91,7 @@
         </div>
         <div class="col-lg-3 downScroller">
           <div id="downScroller">
-            <a href="#about" class="scrollto"><i class="icofont-long-arrow-down"></i></a><br><span>BAS</span>
+            <a href="#about" class="scrollto"><i class="icofont-long-arrow-up"></i></a><br><span>haut</span>
           </div>
         </div>
       </div>
@@ -710,7 +710,7 @@
   <script src="assets/vendor/jquery.color/jquery.color.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/index.js"></script>
+  <script src="assets/js/main.js"></script>
 
   <!--aos master-->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
