--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
+  <!--FontAwesome cdn-->
+  <!--link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
 
   <!--aos-master-->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -158,15 +161,15 @@
 
           <div class="col-lg-4 col-md-6  align-items-stretch mt-4 mt-lg-0" data-aos="flip-up" data-aos-duration="2000">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-javascript"></i></div>
-              <h4><a>javaScript</a></h4>
+              <div class="icon"><i class="bx bxl-jquery"></i></div>
+              <h4><a>JQuery</a></h4>
               <!--p>Language client<br>Rendre les applications web interactives.</p-->
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 align-items-stretch mt-4 mt-lg-0" data-aos="flip-up" data-aos-duration="2000">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-laravel"></i></div>
+              <div class="icon"><img src="assets/img/laravel.png"/></div>
               <h4><a>Laravel</a></h4>
             </div>
           </div>
@@ -174,7 +177,7 @@
 
           <div class="col-lg-4 col-md-6  align-items-stretch" data-aos="flip-up" data-aos-duration="2000">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-drupal"></i></div>
+              <div class="icon"><img src="assets/img/ps.png"/></div>
               <h4><a>PhotoShop</a></h4>
             </div>
           </div>
@@ -183,6 +186,13 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-joomla"></i></div>
               <h4><a>Joomla</a></h4>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6  align-items-stretch" data-aos="flip-up" data-aos-duration="2000">
+            <div class="icon-box">
+              <div class="icon"><img src="assets/img/gimp.png"/></div>
+              <h4><a>Gimp</a></h4>
             </div>
           </div>
 
