--- a/index.html
+++ b/index.html
@@ -50,20 +50,21 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header">Acceuil</a></li>
-          <li><a href="#about">A propos</a>
-            <!--ul>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#team">Team</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Dow</a>
-                <ul>
+          <li class="drop-down"><a href="#">A propos</a>
+            <ul>
+              <li><a href="#about">De Kolokol</a></li>
+              <li><a href="#team">Equipe</a></li>
+              <li><a href="#">Projets</a>
+                <!--ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
                   <li><a href="#">Deep Drop Down 3</a></li>
                   <li><a href="#">Deep Drop Down 4</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
+                </ul-->
               </li>
-            </ul-->
+              <li><a href="#portfolio">Réalisations</a>
+            </ul>
           </li>
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
@@ -319,42 +320,42 @@
             <div class="icon-box">
               <i class="icofont-cart"></i>
               <h4><a href="#">Site web e-commerce</a></h4>
-              <p>Booster votre commerce grâce au WEB. Soyez plus proche de vos clients avec un application de vente en ligne professionnel</p>
+              <p>Grâce à nos services, booster votre commerce via une application de vente en ligne professionnel.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-lg-0" data-aos="flip-left" data-aos-duration="2000">
             <div class="icon-box">
               <i class="icofont-ui-touch-phone"></i>
               <h4><a href="#">Applications mobiles</a></h4>
-              <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <p>Nous vous proposons aussi des applications pour mobile IOS ou android.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4" data-aos="flip-left" data-aos-duration="2000">
             <div class="icon-box">
               <i class="icofont-image"></i>
               <h4><a href="#">Conception de logos</a></h4>
-              <p>Logo pour  entreprise, association ou personnel</p>
+              <p>Des logos simples et professionnels pour votre entreprise, votre association ou vous.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4" data-aos="flip-left" data-aos-duration="2000">
             <div class="icon-box">
               <i class="icofont-presentation"></i>
               <h4><a href="#">Site vitrine </a></h4>
-              <p>Présenter votre entreprise, vos services, vos  offres, vos activités etc. </p>
+              <p>Un site pour présenter votre entreprise, vos services, vos  offres, vos activités etc. </p>
             </div>
           </div>
           <div class="col-md-6 mt-4" data-aos="flip-left" data-aos-duration="2000">
             <div class="icon-box">
               <i class="icofont-laptop"></i>
               <h4><a href="#">Applications desktop</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p>Une application desktop pour vous aider dans vos activités, par exemple gérer vos stockes ou autres.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4" data-aos="flip-left" data-aos-duration="2000">
             <div class="icon-box">
               <i class="icofont-business-man"></i>
               <h4><a href="#">Site web personnel</a></h4>
-              <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <p>Besoin d'un site à vous ? L'équipe de kolokolo peut vous en faire un très moderne.</p>
             </div>
           </div>
         </div>
@@ -386,14 +387,14 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-aos="zoom-in" data-aos-duration="2000">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/logo-kolokolo.png" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="link-preview venobox" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">App 1</a></h4>
-                <p>App</p>
+                <h4><a href="portfolio-details.html">Kolokolo</a></h4>
+                <p>LOGO</p>
               </div>
             </div>
           </div>
@@ -659,10 +660,10 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Liens utiles</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#header">Acceuil</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#about">A propos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Conditions de services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#header" class="scrollto">Acceuil</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about" class="scrollto">A propos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services" class="scrollto">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" class="scrollto">Conditions de services</a></li>
               <!--li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li-->
             </ul>
           </div>
@@ -670,9 +671,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Nos services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Développement Web</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Développement Mobile</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contruction de logos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Développement Web</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Développement Mobile</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Contruction de logos</a></li>
             </ul>
           </div>
 
@@ -720,7 +721,7 @@
   <script src="assets/vendor/jquery.color/jquery.color.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/index.js"></script>
 
   <!--aos master-->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
