--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
 
   <!--aos-master-->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -46,25 +46,26 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="./#header">Acceuil</a></li>
-          <li><a href="#about">A propos</a>
-            <!--ul>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#team">Team</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Dow</a>
-                <ul>
+          <li class="drop-down"><a href="#">A propos</a>
+            <ul>
+              <li><a href="./#about">De Kolokol</a></li>
+              <li><a href="./#team">Equipe</a></li>
+              <li><a href="#">Projets</a>
+                <!--ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
                   <li><a href="#">Deep Drop Down 3</a></li>
                   <li><a href="#">Deep Drop Down 4</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
+                </ul-->
               </li>
-            </ul-->
+              <li><a href="#portfolio">Réalisations</a>
+            </ul>
           </li>
           <li><a href="./#services">Services</a></li>
           <li><a href="./#portfolio">Portfolio</a></li>
           <!--li><a href="#testimonials">Testimonials</a></li-->
-          <li><a href="./#contact">Contact Us</a></li>
+          <li><a href="./#contact">Contactez-nous</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -86,10 +87,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Details Portfolio</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li><a href="index.html">Acceuil</a></li>
+            <li>Details Portfolio</li>
           </ol>
         </div>
 
@@ -103,7 +104,7 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/portfolio-details-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/logo-kolokolo.png" class="img-fluid" alt="">
             <img src="assets/img/portfolio-details-2.jpg" class="img-fluid" alt="">
             <img src="assets/img/portfolio-details-3.jpg" class="img-fluid" alt="">
           </div>
@@ -113,8 +114,8 @@
             <ul>
               <li><strong>Category</strong>: Web design</li>
               <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Date</strong>: 01 March, 2020</li>
+              <li><strong>URL</strong>: <a href="#">www.example.com</a></li>
             </ul>
           </div>
 
@@ -150,10 +151,10 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Liens utiles</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#header">Acceuil</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#about">A propos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Conditions de services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./#header" class="scrollto">Acceuil</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./#about" class="scrollto">A propos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./#services" class="scrollto">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" >Conditions de services</a></li>
               <!--li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li-->
             </ul>
           </div>
@@ -161,9 +162,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Nos services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Développement Web</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Développement Mobile</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contruction de logos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Développement Web</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Développement Mobile</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Contruction de logos</a></li>
             </ul>
           </div>
 
@@ -210,7 +211,7 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/index.js"></script>
 
   <!--aos master-->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
