retouche de quelques images

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/portfolio/logo-kolokolo.png" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="link-preview venobox" title="Preview"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/logo-kolokolo.png" data-gall="portfolioGallery" class="link-preview venobox" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
