ajout d'une page d'administration pour gérer les projets

--- a/index.html
+++ b/index.html
@@ -52,18 +52,17 @@
           <li class="active"><a href="#header">Acceuil</a></li>
           <li class="drop-down"><a href="#">A propos</a>
             <ul>
-              <li><a href="#about">De Kolokol</a></li>
+              <li><a href="#about">De Kolokolo</a></li>
               <li><a href="#team">Equipe</a></li>
-              <li><a href="#">Projets</a>
-                <!--ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul-->
+              <li><a href="#">Projets</a></li>
+              <li class="drop-down"><a href="#portfolio">Réalisations</a>
+              	<ul>
+                  <li><a href="#">Web</a></li>
+                  <li><a href="#">Mobile</a></li>
+                  <li><a href="#">Desktop</a></li>
+                  <li><a href="#">Logo</a></li>
+                </ul>
               </li>
-              <li><a href="#portfolio">Réalisations</a>
             </ul>
           </li>
           <li><a href="#services">Services</a></li>
@@ -389,11 +388,11 @@
               <figure>
                 <img src="assets/img/portfolio/logo-kolokolo.png" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/logo-kolokolo.png" data-gall="portfolioGallery" class="link-preview venobox" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details.php" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Kolokolo</a></h4>
+                <h4><a href="portfolio-details.php">Kolokolo</a></h4>
                 <p>LOGO</p>
               </div>
             </div>
@@ -404,11 +403,11 @@
               <figure>
                 <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/portfolio-2.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details.php" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Web 3</a></h4>
+                <h4><a href="portfolio-details.php">Web 3</a></h4>
                 <p>Web</p>
               </div>
             </div>
@@ -419,11 +418,11 @@
               <figure>
                 <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/portfolio-3.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details.php" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">App 2</a></h4>
+                <h4><a href="portfolio-details.php">App 2</a></h4>
                 <p>App</p>
               </div>
             </div>
